--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
+    "react-scroll": "^1.7.9",
     "react-slick": "^0.23.1",
     "reactstrap": "^6.0.1"
   },
