--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
+    "jwt-decode": "^2.2.0",
     "npm": "^6.1.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
