--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,12 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.22.2",
     "npm": "^6.1.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-fontawesome": "^1.6.1",
+    "react-moment": "^0.7.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
