--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.0.17",
     "morgan": "^1.9.0",
+    "nodemailer": "^4.6.7",
     "nodemon": "^1.17.5",
     "npm": "^6.0.1"
   }
