--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
@@ -24,7 +22,5 @@
     "npm": "^6.0.1"
   },
   "devDependencies": {
-    "homepage": "https://clayyy123.github.io/rachelwang/",
-    "gh-pages": "^1.2.0"
   }
 }
